--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,10 +1,12 @@
 /**********VARIABLES TEXTUELLES**********/
-$font-text: 'Montserrat', 'sans-serif';
+$font-text: 'Averia Serif Libre', 'serif';
 
 /**********VARIABLES COULEURS**********/
 $bg-primary: white;
 $primary-accentuate-color: #ffe500;
 $second-accentuate-color: #ffea2f;
+$color-red: #F30000;
+$color-purple: #6947FF;
 
 $color-text: black;
 
