--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -5,6 +5,49 @@
 
 /***0px***/
 
+.home {
+  &__title {
+    text-align: center;
+  }
+
+  &__list {
+    &--primary-actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      margin: 1rem 0;
+    }
+
+    &--secondary-actions {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: underline;
+      font-size: 1rem;
+      gap: 1rem;
+    }
+  }
+
+  &__item--play {
+    border: 4px solid $color-red;
+  }
+
+  &__item--instruments {
+    border: 4px solid $color-purple;
+  }
+
+  &__item--first-list {
+    background-color: white;
+    padding: 10px 15px;
+    border-radius: 10px;
+
+    .home__link {
+      font-size: 2rem;
+    }
+  }
+}
 
 /***640px***/
 @include mobile-sm {
@@ -16,12 +59,52 @@
 
 /***1024px***/
 @include mobile-lg {
+  .home {
+    &__section {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: center;
+      margin-left: 25rem;
+    }
 
+    &__title {
+      position: relative;
+      font-size: 8rem;
+      text-align: start;
+      width: 100%;
+
+      &::before {
+        position: absolute;
+        content: "";
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        border-bottom: 2px solid black;
+      }
+
+      &::after {
+        position: absolute;
+        content: "";
+        clip-path: circle(50% at 50% 50%);
+        bottom: -12px;
+        left: -20px;
+        background-color: $color-red;
+        width: 30px;
+        height: 30px;
+      }
+    }
+
+    &__list--primary-actions {
+      flex-direction: row;
+      margin: 3rem 0;
+    }
+
+  }
 }
 
 /***1280px***/
 @include mobile-xl {
-  
 }
 
 /***1536px***/
