--- a/frontend/src/styles/_reset.scss
+++ b/frontend/src/styles/_reset.scss
@@ -7,9 +7,15 @@
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ul,
+li,
 ol {
   list-style-type: none;
+  list-style: none;
 }
 
 button,
