--- a/frontend/src/pages/TimelineComposer.scss
+++ b/frontend/src/pages/TimelineComposer.scss
@@ -5,7 +5,55 @@
 
 /***0px***/
 
-
+.timeline {
+    padding: 1rem;
+    margin: 0 auto;
+    max-width: 1280px;
+  
+    &__section {
+      display: grid;
+      gap: 1rem;
+    }
+  
+    &__title {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+  
+    &__subtitle {
+      display: block;
+      font-size: 1rem;
+      color: #555;
+    }
+  
+    &__instruments {
+      display: grid;
+      gap: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
+    }
+  
+    &__dropzones {
+      display: grid;
+      gap: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+  
+    &__reset-button {
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background-color: #3b82f6;
+      color: white;
+      border: none;
+      border-radius: 0.375rem;
+      justify-self: center;
+      cursor: pointer;
+  
+      &:hover {
+        background-color: #2563eb;
+      }
+    }
+  }
+  
 /***640px***/
 @include mobile-sm {
 }
