--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -29,10 +29,10 @@ html,
 }
 
 body {
-  background-image: url("./../../public/media/bg-home.webp");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  // background-image: url("./../../public/media/bg-home.webp");
+  // background-repeat: no-repeat;
+  // background-position: center;
+  // background-size: cover;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
