--- a/frontend/src/component/timeline/DroppableZoneTimeline.scss
+++ b/frontend/src/component/timeline/DroppableZoneTimeline.scss
@@ -10,6 +10,7 @@
   aspect-ratio: 1 / 1;
   border: 1px solid black;
   background-color: white;
+  border-radius: 5px;
   cursor: pointer;
 
   &--over {
