--- a/frontend/src/pages/TimelineComposer.scss
+++ b/frontend/src/pages/TimelineComposer.scss
@@ -6,54 +6,82 @@
 /***0px***/
 
 .timeline {
-    padding: 1rem;
-    margin: 0 auto;
-    max-width: 1280px;
+  padding: 1rem;
+  margin: 0 auto;
+  margin-inline: auto;
+  max-width: 1280px;
   
-    &__section {
-      display: grid;
-      gap: 1rem;
-    }
-  
-    &__title {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-  
-    &__subtitle {
-      display: block;
-      font-size: 1rem;
-      color: #555;
-    }
-  
-    &__instruments {
-      display: grid;
-      gap: 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
-    }
-  
-    &__dropzones {
-      display: grid;
-      gap: 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    }
-  
-    &__reset-button {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background-color: #3b82f6;
-      color: white;
-      border: none;
-      border-radius: 0.375rem;
-      justify-self: center;
-      cursor: pointer;
-  
-      &:hover {
-        background-color: #2563eb;
-      }
+
+  &__section {
+    display: grid;
+    gap: 1rem;
+  }
+
+  &__title {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  &__subtitle {
+    display: block;
+    font-size: 1rem;
+    color: #555;
+  }
+
+  &__list-parameters {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+  }
+
+  &__instruments {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(8rem, max-content));
+    padding: 30px 25px;
+    box-shadow: 0px 0px 16px -4px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
+
+  &__dropzones {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+
+  &__list-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  &__reset-button {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: #f63b3b;
+    color: black;
+    border-radius: 0.375rem;
+
+    &:hover {
+      background-color: rgb(120, 4, 4);
     }
   }
-  
+
+  &__confirm-timeline {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: #3b82f6;
+    color: white;
+    border-radius: 0.375rem;
+
+    &:hover {
+        background-color: rgb(34, 67, 255);
+      }
+  }
+}
+
 /***640px***/
 @include mobile-sm {
 }
@@ -64,12 +92,10 @@
 
 /***1024px***/
 @include mobile-lg {
-
 }
 
 /***1280px***/
 @include mobile-xl {
-  
 }
 
 /***1536px***/
