--- a/frontend/src/component/timeline/DroppableZoneTimeline.scss
+++ b/frontend/src/component/timeline/DroppableZoneTimeline.scss
@@ -10,8 +10,11 @@
   aspect-ratio: 1 / 1;
   border: 1px solid black;
   background-color: white;
-  border-radius: 5px;
-  cursor: pointer;
+  border-radius: 0.5rem;
+  width: 150px;
+  height: 13rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
+  border: 2px solid $color-red;
 
   &--over {
     background-color: #e5e7eb;
@@ -28,7 +31,9 @@
   &__image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    object-fit: contain;
+    border-radius: 0.5rem;
   }
 
   &__index {
