fonctionnement du jeu timeline

--- a/frontend/src/component/timeline/DroppableZoneTimeline.scss
+++ b/frontend/src/component/timeline/DroppableZoneTimeline.scss
@@ -14,7 +14,7 @@
   width: 150px;
   height: 13rem;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
-  border: 2px solid $color-red;
+  // border: 2px solid $color-red;
 
   &--over {
     background-color: #e5e7eb;
