--- a/frontend/src/component/timeline/DroppableZoneTimeline.scss
+++ b/frontend/src/component/timeline/DroppableZoneTimeline.scss
@@ -1,20 +1,18 @@
 @use "../../styles/_mixins" as *;
 @use "../../styles/_variables" as *;
-@use "../../styles/_reset" as *;
-@use "../../styles/_global" as *;
 
 /***0px***/
 
 .droppable-zone {
   position: relative;
   aspect-ratio: 1 / 1;
-  border: 1px solid black;
   background-color: white;
   border-radius: 0.5rem;
+  min-width: 50px;
   width: 150px;
-  height: 13rem;
+  min-height: 100px;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
-  // border: 2px solid $color-red;
+  background-color: rgb(241, 241, 43);
 
   &--over {
     background-color: #e5e7eb;
@@ -24,31 +22,12 @@
     background-color: lightblue;
   }
 
-  &--disabled {
-    pointer-events: none;
-  }
-
   &__image {
     width: 100%;
     height: 100%;
     aspect-ratio: 1 / 1;
     object-fit: contain;
     border-radius: 0.5rem;
-  }
-
-  &__index {
-    position: absolute;
-    top: 0.25rem;
-    left: 0.25rem;
-    width: 2.5rem;
-    height: 2.5rem;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-    background-color: black;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
   }
 }
 
