--- a/frontend/src/pages/SettingsGame.scss
+++ b/frontend/src/pages/SettingsGame.scss
@@ -1,7 +1,5 @@
 @use "../styles/_mixins" as *;
 @use "../styles/_variables" as *;
-@use "../styles/_reset" as *;
-@use "../styles/_global" as *;
 
 /***0px***/
 
@@ -69,6 +67,10 @@
 
     &--hard {
       background-color: red;
+    }
+    
+    &--survival {
+      background-color: purple;
     }
   }
 
