--- a/frontend/src/component/user/ListUsers.scss
+++ b/frontend/src/component/user/ListUsers.scss
@@ -1,8 +1,14 @@
-@use "../styles/_mixins" as *;
-@use "../styles/_variables" as *;
+@use "../../styles/_mixins" as *;
+@use "../../styles/_variables" as *;
 
 /***0px***/
 
+.list__users {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  gap: 2rem;
+  padding: 2rem;
+}
 
 /***640px***/
 @include mobile-sm {
@@ -14,12 +20,10 @@
 
 /***1024px***/
 @include mobile-lg {
-
 }
 
 /***1280px***/
 @include mobile-xl {
-  
 }
 
 /***1536px***/
