--- a/frontend/src/pages/EditUser.scss
+++ b/frontend/src/pages/EditUser.scss
@@ -2,7 +2,7 @@
 @use "../styles/_variables" as *;
 
 /***0px***/
-.instrument-edit {
+.user-edit {
   padding: 1.5rem;
   background-color: white;
   border-radius: 0.5rem;
@@ -39,13 +39,13 @@
     margin: 0 0 0.2rem 0;
   }
 
-  &__input,
-  &__textarea {
+  &__input {
     padding: 0.75rem;
     border: 1px solid #ccc;
     border-radius: 0.375rem;
     font-size: 1rem;
     transition: border 0.2s;
+    height: 2.4rem;
 
     &:focus {
       border-color: #4f46e5;
@@ -53,20 +53,13 @@
     }
   }
 
-  &__input {
-    height: 2.4rem;
-  }
-
-  &__textarea {
-    resize: vertical;
-    height: 7rem;
-  }
-
   &__actions {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 0 0 0;
+    padding-top: 0.5rem;
+    flex-wrap: wrap;
+    gap: 0.5rem;
   }
 
   &__button {
