--- a/frontend/src/pages/Page404.scss
+++ b/frontend/src/pages/Page404.scss
@@ -3,6 +3,72 @@
 
 /***0px***/
 
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+
+  &__section {
+    max-width: 700px;
+    text-align: start;
+    background-color: white;
+    padding: 3rem 2.5rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    position: relative;
+    
+    &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        border-bottom: 2px solid black;
+        width: 100vw;
+      }
+
+      &::after {
+        position: absolute;
+        content: "";
+        clip-path: circle(50% at 50% 50%);
+        top: -12px;
+        left: -20px;
+        background-color: $color-red;
+        width: 30px;
+        height: 30px;
+      }
+  }
+
+  &__title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    color: #2c2c2c;
+  }
+
+  &__message {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #444;
+    margin-bottom: 2rem;
+  }
+
+  &__link {
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    background-color: #5c6ac4;
+    color: white;
+    text-decoration: none;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #434eb4;
+    }
+  }
+}
 
 /***640px***/
 @include mobile-sm {
@@ -14,12 +80,10 @@
 
 /***1024px***/
 @include mobile-lg {
-
 }
 
 /***1280px***/
 @include mobile-xl {
-  
 }
 
 /***1536px***/
