--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -3,6 +3,86 @@
 
 /***0px***/
 
+.profile {
+    &__section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+ 
+  
+    &__banner-wrapper {
+      position: relative;
+      width: 100%;
+    }
+  
+    &__banner {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      display: block;
+    }
+
+    &__score {
+        position: absolute;
+        transform: translateX(-50%);
+        left: 50%;
+        margin: 1.2rem 0 0 0;
+        font-size: 2rem;
+        background-color: white;
+        padding: 10px 15px;
+        border-radius: 0.5rem;
+    }
+  
+    &__avatar {
+      width: 135px;
+      height: 135px;
+      border-radius: 50%;
+      border: 4px solid #fff;
+      position: absolute;
+      bottom: -60px; 
+      left: 50%;
+      transform: translateX(-50%);
+      object-fit: cover;
+      background-color: #fff;
+    }
+  
+    &__form {
+      margin-top: 60px;
+      width: 100%;
+      max-width: 400px;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      padding: 1rem;
+    }
+
+    &__fields {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+  
+    &__field {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    &__label {
+      font-weight: bold;
+      margin-bottom: 0.25rem;
+      color: #444;
+    }
+  
+    &__input {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.4rem;
+      font-size: 1rem;
+    }
+  }
+  
 
 /***640px***/
 @include mobile-sm {
@@ -14,12 +94,10 @@
 
 /***1024px***/
 @include mobile-lg {
-
 }
 
 /***1280px***/
 @include mobile-xl {
-  
 }
 
 /***1536px***/
