--- a/frontend/src/pages/SettingsGame.scss
+++ b/frontend/src/pages/SettingsGame.scss
@@ -4,58 +4,126 @@
 /***0px***/
 
 .settings {
-  &__instrument-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    padding: 15px 0;
-    border-bottom: 2px solid black;
-  }
-
-  &__instrument-item {
+  align-items: center;
+  &__section {
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
   }
 
-  &__instrument-button {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    border-radius: 8px;
-    //   cursor: pointer;
+  &__content {
+    width: 100%;
+  }
 
-    &--annee {
-      background-color: #e0e0e0;
+  &__title {
+    position: relative;
+    width: 100%;
+    &::before {
+      position: absolute;
+      content: "";
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      border-bottom: 2px solid black;
     }
 
-    &--poids {
-      background-color: #f2c94c;
+    &::after {
+      position: absolute;
+      content: "";
+      clip-path: circle(50% at 50% 50%);
+      bottom: -12px;
+      left: -20px;
+      background-color: $color-red;
+      width: 30px;
+      height: 30px;
+    }
+  }
+  &__instrument-fieldset {
+    display: flex;
+    align-items: start;
+    gap: 1.5rem 3rem;
+    width: 100%;
+  }
+
+  &__instrument-title {
+    margin: 1rem 0;
+  }
+
+  &__instrument-card {
+    position: relative;
+    width: 10rem;
+    height: 13rem;
+    border-radius: 0.5rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+
+    &--Annee {
+      background-image: url("./../../public/media/piano-bg.jpg");
+    }
+    &--Poids {
+      background-image: url("./../../public/media/piano-bg.jpg");
+    }
+    &--Taille {
+      background-image: url("./../../public/media/piano-bg.jpg");
     }
 
-    &--taille {
-      background-color: #56ccf2;
+    & > .settings__instrument-content {
+      position: relative;
+      z-index: 3;
+      width: 100%;
+      background-color: red;
+      align-content: center;
+      height: 2rem;
+      border-radius: 0 0 0.5rem 0.5rem;
+    }
+    &:active {
+      transform: scale(0.98);
+      background-color: rgba(255, 0, 0, 0.15);
+    }
+
+    &:hover {
+      outline: 2px solid $color-purple;
+      outline-offset: 4px;
+      z-index: 4;
     }
   }
 
   &__options {
-    padding: 15px 0;
+    margin: 1.3rem 0;
+  }
+
+  &__options-title {
+    margin: 1rem 0;
   }
 
   &__difficulty-list {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin: 15px 0;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1.5rem;
   }
 
-  &__instrument-item,
-  &__instrument-button {
+  &__difficulty-item {
     width: 100%;
   }
 
   &__difficulty-button {
-    padding: 15px;
-    border-radius: 8px;
-    width: 8rem;
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
+    border-radius: 0.5rem;
+    transition: transform 0.1s ease-in-out, background-color 0.2s;
+    text-align: left;
 
     &--easy {
       background-color: green;
@@ -68,81 +136,51 @@
     &--hard {
       background-color: red;
     }
-    
+
     &--survival {
       background-color: purple;
     }
+
+    &:hover {
+      outline: 2px solid $color-purple;
+      outline-offset: 4px;
+    }
+
+    &:active {
+      transform: scale(0.98);
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    &__difficulty-label {
+      font-weight: bold;
+    }
+
+    &__difficulty-details {
+      display: flex;
+      gap: 1rem;
+    }
+  }
+
+  &__parameter-title {
+    margin: 1rem 0;
   }
 
   &__parameter-list {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin: 10px 0;
+    margin: 1rem 0;
+  }
+
+  &__start-button {
+    padding: 10px 15px;
+    border: 2px solid $color-red;
+    border-radius: 0.5rem;
+    width: 100%;
+    height: 3rem;
+    margin: 0.5rem 0 0 0;
   }
 }
 
 /***640px***/
 @include mobile-sm {
-  .settings__section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  .settings__content {
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    gap: 2rem;
-    margin: 2rem 0 0 0;
-    padding: 1rem;
-    border: 2px solid black;
-    border-radius: 10px;
-  }
-
-  .settings__instrument-list {
-    display: flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: column;
-    border-bottom: none;
-    padding: 0;
-  }
-
-  .settings__difficulty-list {
-    gap: 1rem;
-  }
-
-  .settings__options {
-    border-left: 2px solid black;
-    padding: 0 0 0 1.5rem;
-  }
-
-  .settings__input-group {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-  }
-
-  .settings__range {
-    width: 18rem;
-    margin: 0 0.8rem 0 0;
-  }
-
-  .settings__number {
-    width: 2rem;
-    height: 2rem;
-    border-radius: 4px;
-  }
-
-  .settings__start-button {
-    padding: 15px 10px;
-    background-color: white;
-    border-radius: 10px;
-    border: 2px solid $color-red;
-  }
 }
 
 /*** 768px***/
