--- a/frontend/src/component/timeline/DraggableInstrument.scss
+++ b/frontend/src/component/timeline/DraggableInstrument.scss
@@ -5,7 +5,7 @@
 
 .draggable-instrument {
   width: 150px;
-  transition: transform 0.2s;
+  // transition: transform 0.2s;
   border-radius: 0.5rem;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
   border: 2px solid $color-red;
@@ -13,6 +13,7 @@
 
   &__image {
     width: 100%;
+    min-height: 11rem;
     aspect-ratio: 1 / 1;
     object-fit: contain;
     border-radius: 0.5rem;
