--- a/frontend/src/pages/Ranking.scss
+++ b/frontend/src/pages/Ranking.scss
@@ -3,6 +3,15 @@
 
 /***0px***/
 
+.ranking__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ranking__title {
+    margin: 0 0 1rem 0;
+}
 
 /***640px***/
 @include mobile-sm {
