--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -167,7 +167,7 @@
     box-shadow: 0 4px 10px rgba(231, 76, 60, 0.3);
 
     &:hover {
-      background-color: darken(#e74c3c, 10%);
+      // background-color: darken(#e74c3c, 10%);
       transform: scale(1.03);
     }
 
