amélioration css + ajout d'un fichier pour gérer les imports

--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -24,6 +24,7 @@
     background-color: white;
     padding: 10px 15px;
     border-radius: 0.5rem;
+    z-index: 2;
   }
 
   &__banner-container {
