--- a/frontend/src/pages/TimelineComposer.scss
+++ b/frontend/src/pages/TimelineComposer.scss
@@ -4,7 +4,7 @@
 /***0px***/
 
 .timeline {
-  padding: 1rem;
+  padding: 0.2rem 0 1rem 0;
   margin: 0 auto;
   margin-inline: auto;
   max-width: 1280px;
@@ -30,15 +30,34 @@
     align-items: center;
     justify-content: start;
     gap: 1rem;
+    // margin: 0 0 1rem 0;
+  }
+
+  &__list-parameters-text--timer {
+    margin: 0 0.5rem 0 0;
   }
 
   &__instruments {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 0.4rem;
     position: relative;
-    width: 100%;
-    height: 13rem;
+    // width: 100%;
+    height: 16rem;
+
+    &-link {
+      padding: 15px 10px;
+      border: 2px solid $color-red;
+      border-radius: 10px;
+    }
+
+    &-button {
+      padding: 15px 10px;
+      border: 2px solid $color-purple;
+      border-radius: 10px;
+    }
   }
 
   &__dropzones {
@@ -49,6 +68,7 @@
     padding: 30px;
     box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.18);
     border-radius: 1rem 1rem 0 0;
+    margin: 1rem 0 0 0;
     // display: grid;
     // gap: 1rem;
     // grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
