--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 /**********VARIABLES TEXTUELLES**********/
-$font-text: 'Averia Serif Libre', 'serif';
+$font-text: 'Montserrat', 'sans-serif';
 
 /**********VARIABLES COULEURS**********/
 $bg-primary: white;
@@ -7,6 +7,8 @@ $primary-accentuate-color: #ffe500;
 $second-accentuate-color: #ffea2f;
 $color-red: #F30000;
 $color-purple: #6947FF;
-
+$color-blue: #00c3ff;
+$color-green: #00ff88;
+$color-white: #f0f0f0;
 $color-text: black;
 
