--- a/frontend/src/pages/Register.scss
+++ b/frontend/src/pages/Register.scss
@@ -1,69 +1,85 @@
 @use "../styles/_mixins" as *;
 @use "../styles/_variables" as *;
 
-/***0px***/
-
 .register {
   &__form {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: white;
   }
 
   &__fieldset {
-    padding: 44px;
+    padding: 20px 38px 30px 38px;
     border-radius: 10px;
     border: 2px solid black;
+    background-color: white;
+    max-width: 450px;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   &__legend {
     font-size: 1.5rem;
+    font-weight: 700;
   }
 
   &__list {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    margin: -25px 0 0 0;
+    gap: 1rem;
   }
 
   &__item {
     display: flex;
     flex-direction: column;
-    margin: 0.5rem 0;
     width: 100%;
     position: relative;
   }
 
-  &__label,
-  &__input {
+  &__label {
     font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 0.3rem;
   }
 
   &__input {
+    font-size: 1.2rem;
     border-radius: 5px;
     height: 3rem;
     padding: 0 47px 0 15px;
-    margin: 0.2rem 0 0 0;
+    border: 1.5px solid black;
+    transition: border-color 0.3s ease;
+    width: 100%;
+
+    &:focus {
+      border-color: $color-red;
+      box-shadow: 0 0 5px rgba($color-red, 0.5);
+    }
   }
 
-  #password {
-    padding: 0 47px 0 15px;
+  &__password-container {
+    position: relative;
   }
 
-  &__show-password, &__confirm-show-password {
+  &__show-password,
+  &__confirm-show-password {
     position: absolute;
     width: 24px;
     height: 24px;
     top: 50%;
     right: 0.75rem;
-    cursor: pointer;
-    background-image: url("/media/hide-password.svg");
     background-repeat: no-repeat;
     background-position: center;
+    background-image: url("/media/hide-password.svg");
+    transform: translateY(-50%);
 
-    &.is-visible, &__confirm-show-password {
+    &:focus-visible {
+      outline: 2px solid $color-red;
+      outline-offset: 2px;
+    }
+
+    &.is-visible {
       background-image: url("/media/show-password.svg");
     }
   }
@@ -72,26 +88,62 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0.3rem 0 0 0;
+    margin-top: 1.5rem;
+    gap: 1rem;
   }
 
-  &__button--submit {
-    background-color: white;
+  &__button-item--submit {
+    width: 100%;
+  }
+
+  &__button {
+    width: 100%;
     padding: 10px 15px;
-    border: 4px solid $color-red;
     border-radius: 10px;
     font-size: 1.2rem;
+    font-weight: 600;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+
+    &--submit {
+      @include button-style($color-red);
+    }
+
+    &--reset {
+      @include button-style($color-purple);
+    }
   }
 
-  &__button--reset {
-    background-color: white;
-    padding: 10px 15px;
-    border: 4px solid $color-purple;
-    border-radius: 10px;
-    font-size: 1.2rem;
+  &__error {
+    color: $color-red;
+    font-size: 1rem;
+    margin-top: 0.25rem;
+    font-weight: 600;
   }
 
+  &__title {
+    position: relative;
+    text-align: center;
+    margin-bottom: 1rem;
 
+    &::after {
+      position: absolute;
+      content: "";
+      bottom: 0;
+      width: 100%;
+      border-bottom: 2px solid black;
+    }
+
+    &::before {
+      position: absolute;
+      content: "";
+      clip-path: circle(50% at 50% 50%);
+      bottom: -12px;
+      left: -20px;
+      background-color: $color-red;
+      width: 30px;
+      height: 30px;
+    }
+  }
 }
 
 /***640px***/
@@ -105,29 +157,8 @@
 /***1024px***/
 @include mobile-lg {
   .register {
-    &__title {
-      position: relative;
-      text-align: center;
-      margin: 0 0 1rem 0;
-
-      &::before {
-        position: absolute;
-        content: "";
-        bottom: 0;
-        width: 100%;
-        border-bottom: 2px solid black;
-      }
-
-      &::after {
-        position: absolute;
-        content: "";
-        clip-path: circle(50% at 50% 50%);
-        bottom: -12px;
-        left: -20px;
-        background-color: $color-red;
-        width: 30px;
-        height: 30px;
-      }
+    &__fieldset {
+      padding: 2rem;
     }
   }
 }
