--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -46,3 +46,44 @@
 
 /******ANIMATIONS******/
 
+@mixin button-style($color) {
+  background-color: white;
+  border: 4px solid $color;
+  color: $color;
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
+
+  &:hover:not(:disabled),
+  &:focus:not(:disabled) {
+    background-color: $color;
+    color: white;
+  }
+
+  &:disabled {
+    border-color: gray;
+    color: gray;
+    background-color: white;
+  }
+}
+@mixin button-style($bg-color) {
+  padding: 1rem 2rem;
+  border-radius: 15px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: none;
+  color: white;
+  cursor: pointer;
+  background: $bg-color;
+  transition: all 0.3s ease;
+
+  &:hover {
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+  }
+}
+
+
